--- a/ticket_service/package.json
+++ b/ticket_service/package.json
@@ -20,20 +20,24 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.8.1",
+    "@nestjs/apollo": "^12.0.7",
     "@nestjs/common": "^9.4.3",
     "@nestjs/core": "^9.4.3",
+    "@nestjs/graphql": "^12.0.8",
     "@nestjs/platform-express": "^9.4.3",
     "@types/axios": "^0.14.0",
     "@types/cheerio": "^0.22.31",
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
+    "graphql": "^16.7.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.5.0",
     "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/testing": "^9.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
